--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
+.song-queue {
+    height:65vh;
+    overflow-y:auto;
+    width:100%;
+    background-color:#333666;
+}
+
+@media (min-width: 992px) {
+    .song-queue {
+        height:75vh;
+    }
+}
+
 .mobile-search {
    padding:10px;
    height:8vh;
+   min-height:40px;
    vertical-align:middle;
    background-color:#666;
    display: flex;
@@ -10,10 +24,30 @@
 
 .now-playing {
   height:27vh;
-  max-height:27vh;
+  min-height:150px;
   padding:30px 10px;
   background-color:#333;
   margin:0px;
+  background-size:cover;
+}
+
+@media (min-width: 992px) {
+    .now-playing {
+        height:21vh;
+    }
+}
+
+.now-playing-header {
+    margin:0px;
+    padding:0px;
+    text-align:center;
+    color:white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height:4vh;
+    width:100%;
+    background-color:#666;
 }
 
 .now-playing .album {
@@ -43,10 +77,10 @@
 
 @media (min-width: 576px) {
   .now-playing .song {
-      font-size:24pt;
+      font-size:20pt;
   }
   .now-playing .artist {
-      font-size:20pt;
+      font-size:18pt;
   }
 }
 
@@ -59,6 +93,11 @@
   }
 }
 
+.iphone-spacer {
+    width:100%;
+    height:64px;
+}
+
 .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */
     height: 0;
@@ -67,8 +106,10 @@
     z-index: 1035; /* Sit on top */
     left: 0;
     top: 0;
-    background-color: #333; /* Black w/opacity */
+    background-color: #111; /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
